feat: написано третье задание, но не протестировано